all pages linked

--- a/Contact us.html
+++ b/Contact us.html
@@ -195,21 +195,21 @@ div.desc {
 <body>
 
 <div class="header">
-  <img src="E:\Folder F\orchid logo 1.jpeg" alt=" logo" style="width:50%">
+  <img src="./Images/orchid logo 1.jpeg" alt=" logo" style="width:50%">
 </div>
 
 <div id="navbar">
-  <a href="file:///C:/Users/swetha/Desktop/Project%20Website.html">Home</a>
-  <a href="file:///C:/Users/swetha/Desktop/admissions.html">Our Schools</a>
-  <a href=file:///C:/Users/swetha/Desktop/News%20&%20Updates.html>News & updates</a>
-<a href=file:///C:/Users/swetha/Desktop/Alumni%20Stories.html>Alumni Stories</a>
-<a class="active" href=file:///C:/Users/swetha/Desktop/Contact%20us.html>Contact Us</a>
-<a href=file:///C:/Users/swetha/Desktop/Admissions.html>Admissions</a>
+  <a href="./Project Website.html">Home</a>
+  <a href="./Admissions.html">Our Schools</a>
+  <a href="./News & Updates.html">News & updates</a>
+<a href="./Alumni Stories.html">Alumni Stories</a>
+<a class="active" href="./Contact us.html">Contact Us</a>
+<a href="./Admissions.html">Admissions</a>
 </div>
 
 <div class="parent">
-<img class="image1" src="E:\Folder F\contactUs 1.webp"alt="Your Image" style="width:100%">
-<img class="image2" src="E:\Folder F\bg9.jpeg"alt="Your Image" style="width:27%">
+<img class="image1" src="./Images/contactUs 1.webp"alt="Your Image" style="width:100%">
+<img class="image2" src="./Images/bg9.jpeg"alt="Your Image" style="width:27%">
  <div class="text1">
   <h2>Contact Us</h2>
 </div>
@@ -220,7 +220,7 @@ div.desc {
 
 
 <div class="container">
-  <form action="/action_page.php">
+  <form action="./action_page.php">
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
@@ -287,8 +287,8 @@ With Virtual School Experience, wherever your family is in the world, you can ac
 
 
 <div class="gallery">
-  <a target="_blank" href=""E:\Folder F\school 6.jpg"">
-    <img src="E:\Folder F\school 6.jpg" alt="Cinque Terre" width="600" height="400">
+  <a target="_blank" href="./Our Schools.html">
+    <img src="./Images/school 6.jpg" alt="Cinque Terre" width="600" height="400">
   </a>
   <div class="desc">Orchids International School </div>
 </div>
