--- a/News & Updates.html
+++ b/News & Updates.html
@@ -177,17 +177,17 @@ height: auto;
 </div>
 
 <div id="navbar">
-  <a href="file:///C:/Users/swetha/Desktop/Project%20Website.html">Home</a>
-  <a href="file:///C:/Users/swetha/Desktop/Our%20Schools.html">Our Schools</a>
-  <a class="active" href=file:///C:/Users/swetha/Desktop/News%20&%20Updates.html>News & updates</a>
-<a  href=file:///C:/Users/swetha/Desktop/Alumni%20Stories.html>Alumni Stories</a>
-<a href=file:///C:/Users/swetha/Desktop/Contact%20us.html>Contact Us</a>
-<a href="file:///C:/Users/swetha/Desktop/Admissions.html">Admissions</a>
+  <a href="./Project Website.html">Home</a>
+  <a href="./Our Schools.html">Our Schools</a>
+  <a class="active" href="./News & Updates.html">News & updates</a>
+<a  href="./Alumni Stories.html">Alumni Stories</a>
+<a href="./Contact us.html">Contact Us</a>
+<a href="./Admissions.html">Admissions</a>
 </div>
 
 
 <div class="container1">
-<img class="image1" src="E:\Folder F\oak 4.jpg"alt="Your Image">
+<img class="image1" src="./Images/oak 4.jpg"alt="Your Image">
 
 
 
@@ -204,7 +204,7 @@ height: auto;
 
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\1.webp" alt="card-img" style="width:100%">
+        <img src="./Images/News & Updates/1.webp" alt="card-img" style="width:100%">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -219,7 +219,7 @@ height: auto;
 
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\2.webp" alt="card-img"  style="width:100%">
+        <img src="./Images/News & Updates/2.webp" alt="card-img"  style="width:100%">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -241,7 +241,7 @@ height: auto;
 
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\3.webp" alt="card-img">
+        <img src="./Images/News & Updates/3.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -256,7 +256,7 @@ height: auto;
 
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\school 2.jpg" alt="card-img">
+        <img src="./Images/school 2.jpg" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -271,7 +271,7 @@ height: auto;
 
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\oak 5.jpg" alt="card-img">
+        <img src="./Images/oak 5.jpg" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -291,7 +291,7 @@ height: auto;
 <div class="cards-wrapper container">
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\4.webp" alt="card-img">
+        <img src="./Images/News & Updates/4.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -305,7 +305,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\5.webp" alt="card-img">
+        <img src="./Images/News & Updates/5.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -319,7 +319,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\6.png" alt="card-img">
+        <img src="./Images/News & Updates/6.png" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -340,7 +340,7 @@ height: auto;
 <div class="cards-wrapper container">
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\7.webp" alt="card-img">
+        <img src="./Images/News & Updates/7.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -354,7 +354,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\8.webp" alt="card-img">
+        <img src="./Images/News & Updates/8.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -368,7 +368,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\9.jpg" alt="card-img">
+        <img src="./Images/News & Updates/9.jpg" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -390,7 +390,7 @@ height: auto;
 <div class="cards-wrapper container">
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\9.webp" alt="card-img">
+        <img src="./Images/News & Updates/9.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -404,7 +404,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\10.webp" alt="card-img">
+        <img src="./Images/News & Updates/10.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -418,7 +418,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\9.jpg" alt="card-img">
+        <img src="./Images/News & Updates/9.jpg" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -439,7 +439,7 @@ height: auto;
 <div class="cards-wrapper container">
     <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\11.png" alt="card-img">
+        <img src="./Images/News & Updates/11.png" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -453,7 +453,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\12.webp" alt="card-img">
+        <img src="./Images/News & Updates/12.webp" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
@@ -467,7 +467,7 @@ height: auto;
     </div>
 <div class="card">
       <div class="img-wrapper">
-        <img src="E:\Folder F\News & Updates\9.jpg" alt="card-img">
+        <img src="./Images/News & Updates/9.jpg" alt="card-img">
       </div>
       <div class="card-content">
         <ul class="ul-list">
