--- a/Our Schools.html
+++ b/Our Schools.html
@@ -275,16 +275,16 @@ display: inline-block;
 <body>
 
 <div class="header">
-  <img src="E:\Folder F\orchid logo 1.jpeg" alt=" logo" style="width:50%">
+  <img src="./Images/orchid logo 1.jpeg" alt=" logo" style="width:50%">
 </div>
 
 <div id="navbar">
-  <a href="file:///C:/Users/swetha/Desktop/Project%20Website.html">Home</a>
-  <a class="active" href="file:///C:/Users/swetha/Desktop/Our%20Schools.html">Our Schools</a>
-  <a href="file:///C:/Users/swetha/Desktop/News%20&%20Updates.html">News & updates</a>
-<a href="file:///C:/Users/swetha/Desktop/Alumni%20Stories.html">Alumni Stories</a>
-<a href="file:///C:/Users/swetha/Desktop/Contact%20us.html">Contact Us</a>
-<a href="file:///C:/Users/swetha/Desktop/Admissions.html">Admissions</a>
+  <a href="./Project Website.html">Home</a>
+  <a class="active" href="./Our Schools.html">Our Schools</a>
+  <a href="./News & Updates.html">News & updates</a>
+<a href="./Alumni Stories.html">Alumni Stories</a>
+<a href="./Contact us.html">Contact Us</a>
+<a href="./Admissions.html">Admissions</a>
 </div>
 
 
@@ -292,31 +292,31 @@ display: inline-block;
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 5</div>
-  <img src="E:\Folder F\school  5.jpeg" style="width:100%">
+  <img src="./Images/school  5.jpeg" style="width:100%">
   <div class="text">GACHIBOWLI</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 5</div>
-  <img src="E:\Folder F\school 2.jpg" style="width:100%">
+  <img src="./Images/school 2.jpg" style="width:100%">
   <div class="text">BENGALURU</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 5</div>
-  <img src="E:\Folder F\school 3.jpg" style="width:100%">
+  <img src="./Images/school 3.jpg" style="width:100%">
   <div class="text">BACHUPALLY</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">4/ 5</div>
-  <img src="E:\Folder F\school  4.jpg" style="width:100%">
+  <img src="./Images/school  4.jpg" style="width:100%">
   <div class="text">MOHALI</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">4/ 5</div>
-  <img src="E:\Folder F\school 1.jpg"  style="width:100%">
+  <img src="./Images/school 1.jpg"  style="width:100%">
   <div class="text">VISAKHAPATNAM</div>
 </div>
 <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -338,19 +338,19 @@ display: inline-block;
 
 <div class="row">
   <div class="column">
-    <img src="E:\Folder F\oak 2-1.webp" alt="Snow" style="width:100%">
+    <img src="./Images/oak 2-1.webp" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="E:\Folder F\oak 2-2.webp" alt="Forest" style="width:100%">
+    <img src="./Images/oak 2-2.webp" alt="Forest" style="width:100%">
   </div>
   <div class="column">
-    <img src="E:\Folder F\oak 2-3.webp" alt="Mountains" style="width:100%">
+    <img src="./Images/oak 2-3.webp" alt="Mountains" style="width:100%">
   </div>
   <div class="column">
-    <img src="E:\Folder F\oak 2-4.webp" alt="Mountains" style="width:100%">
+    <img src="./Images/oak 2-4.webp" alt="Mountains" style="width:100%">
   </div>
    <div class="column">
-    <img src="E:\Folder F\oak 2-5.webp" alt="Mountains" style="width:100%">
+    <img src="./Images/oak 2-5.webp" alt="Mountains" style="width:100%">
   </div>
 </div>
 
@@ -359,7 +359,7 @@ display: inline-block;
 
 
 <div class="parent">
-  <img class="image1" src="E:\Folder F\bg6.jpg" alt="bg6" style="width:100%">
+  <img class="image1" src="./Images/bg6.jpg" alt="bg6" style="width:100%">
   <div class="text1">
   <h2>Message From Principal</h2>
 </div>
@@ -367,8 +367,8 @@ display: inline-block;
 <p>The vision of Orchids International School, Visakhapatnam is to inspire every individual to unlock their potential by providing outstanding education to make the world a better place. Oakridge International School Visakhapatnam aims to produce compassionate, responsible and innovative global citizens striving for excellence and committed to nurture and progress of society.</p>
 </div>
 <button class="btn">Learn More</button>
-  <img class="image2" src="E:\Folder F\bg7.jpg" alt="bg7" style="width:36%">
-  <img class="image3" src="E:\Folder F\principal.webp" alt="11" style="width:38%">
+  <img class="image2" src="./Images/bg7.jpg" alt="bg7" style="width:36%">
+  <img class="image3" src="./Images/principal.webp" alt="11" style="width:38%">
 </div>
 
 
