--- a/Project Website.html
+++ b/Project Website.html
@@ -362,35 +362,35 @@ display: inline-block;
 <body>
 
 <div class="header">
-  <img src="E:\Folder F\orchid logo 1.jpeg" alt=" logo" style="width:50%">
+  <img src="./Images/orchid logo 1.jpeg" alt=" logo" style="width:50%">
 </div>
 
 <div id="navbar">
-  <a class="active" href="file:///C:/Users/swetha/Desktop/Project%20Website.html">Home</a>
-  <a href="file:///C:/Users/swetha/Desktop/Our%20Schools.html">Our Schools</a>
-  <a href="file:///C:/Users/swetha/Desktop/News%20&%20Updates.html">News & updates</a>
-<a href="file:///C:/Users/swetha/Desktop/Alumni%20Stories.html">Alumni Stories</a>
-<a href="file:///C:/Users/swetha/Desktop/Contact%20us.html">Contact Us</a>
-<a href="file:///C:/Users/swetha/Desktop/admissions.html">Admissions</a>
+  <a class="active" href="./Project Website.html">Home</a>
+  <a href="./Our Schools.html">Our Schools</a>
+  <a href="./News & Updates.html">News & updates</a>
+<a href="./Alumni Stories.html">Alumni Stories</a>
+<a href="./Contact us.html">Contact Us</a>
+<a href="./Admissions.html">Admissions</a>
 </div>
 
 <div class="slideshow-container">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="E:\Folder F\orch 2.jpg.crdownload" style="width:100%">
+  <img src="./Images/orch 4.jpg" style="width:100%">
   <div class="text">WHAT ARE YOU WAITING FOR?</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="E:\Folder F\oak 4.jpg" style="width:100%">
+  <img src="./Images/oak 4.jpg" style="width:100%">
   <div class="text">Give yor future a boost at Orchids!</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="E:\Folder F\oak 5.jpg" style="width:100%">
+  <img src="./Images/oak 5.jpg" style="width:100%">
   <div class="text">Play way method of Education</div>
 </div>
 
@@ -415,8 +415,8 @@ display: inline-block;
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\1-1.webp">
-      <img src="E:\Folder F\1-1.webp" alt="Cinque Terre" width="500" height="300">
+    <a target="_blank" href="./Images/1-1.webp">
+      <img src="./Images/1-1.webp" alt="Cinque Terre" width="500" height="300">
     </a>
   </div>
 </div>
@@ -424,56 +424,56 @@ display: inline-block;
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\2-2.webp">
-      <img src="E:\Folder F\2-2.webp" alt="Forest" width="500" height="300">
+    <a target="_blank" href="./Images/2-2.webp">
+      <img src="./Images/2-2.webp" alt="Forest" width="500" height="300">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\3-3.webp">
-      <img src="E:\Folder F\3-3.webp" alt="Northern Lights" width="500" height="300">
+    <a target="_blank" href="./Images/3-3.webp">
+      <img src="./Images/3-3.webp" alt="Northern Lights" width="500" height="300">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\4-4.webp">
-      <img src="E:\Folder F\4-4.webp" alt="Mountains" width="500" height="300">
+    <a target="_blank" href="./Images/4-4.webp">
+      <img src="./Images/4-4.webp" alt="Mountains" width="500" height="300">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\5-5.webp">
-      <img src="E:\Folder F\5-5.webp" alt="Mountains" width="500" height="300">
+    <a target="_blank" href="./Images/5-5.webp">
+      <img src="./Images/5-5.webp" alt="Mountains" width="500" height="300">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\6-6.webp">
-      <img src="E:\Folder F\6-6.webp" alt="Mountains" width="500" height="300">
+    <a target="_blank" href="./Images/6-6.webp">
+      <img src="./Images/6-6.webp" alt="Mountains" width="500" height="300">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\7-7.webp">
-      <img src="E:\Folder F\7-7.webp" alt="Mountains" width="500" height="300">
+    <a target="_blank" href="./Images/7-7.webp">
+      <img src="./Images/7-7.webp" alt="Mountains" width="500" height="300">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\8-8.webp">
-      <img src="E:\Folder F\8-8.webp" alt="Mountains" width="500" height="300">
+    <a target="_blank" href="./Images/8-8.webp">
+      <img src="./Images/8-8.webp" alt="Mountains" width="500" height="300">
     </a>
   </div>
 </div>
@@ -490,8 +490,8 @@ display: inline-block;
 
 <div class="responsive1">
   <div class="gallery1">
-    <a target="_blank" href="E:\Folder F\oak 1-1.png">
-      <img src="E:\Folder F\oak 1-1.png" alt="Cinque Terre" width="500" height="300">
+    <a target="_blank" href="./Images/oak 1-1.png">
+      <img src="./Images/oak 1-1.png" alt="Cinque Terre" width="500" height="300">
     </a>
     <div class="desc">The International Baccalaureate aims to develop inquiring, knowledgeable and caring young people who help to create a better and more peaceful world through intercultural understanding and respect. IB offers a continuum of international education through challenging, high quality programmes to students aged 3 to 19.</div>
   </div>
@@ -500,8 +500,8 @@ display: inline-block;
 
 <div class="responsive1">
   <div class="gallery1">
-    <a target="_blank" href="E:\Folder F\oak1-2.png">
-      <img src="E:\Folder F\oak1-2.png" alt="Forest" width="500" height="300">
+    <a target="_blank" href="./Images/oak1-2.png">
+      <img src="./Images/oak1-2.png" alt="Forest" width="500" height="300">
     </a>
       <div class="desc">CBSE curriculum is designed to achieve quality benchmarks in middle school (classes VI-X) and senior secondary (classes XI & XII) programmes consistent with the national goals and replete with innovative methods to achieve academic excellence in conformity with psychological, pedagogical and social principles.</div>
   </div>
@@ -509,8 +509,8 @@ display: inline-block;
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="E:\Folder F\oak1-3.png">
-      <img src="E:\Folder F\oak1-3.png" alt="Northern Lights" width="500" height="300">
+    <a target="_blank" href="./Images/oak1-3.png">
+      <img src="./Images/oak1-3.png" alt="Northern Lights" width="500" height="300">
     </a>
      <div class="desc">Cambridge International curriculum is an International trademark set for global standards of education, worldwide. It is offered in more than 10,000 schools across 160 countries and is recognized by universities across the world. A structured curriculum characterized by academic rigor helps learners enhance their skills.</div>
   </div>
@@ -522,7 +522,7 @@ display: inline-block;
 
 
 <div class="parent">
-  <img class="image1" src="E:\Folder F\bg5.jpg" alt="bg" style="width:100%">
+  <img class="image1" src="./Images/bg5.jpg" alt="bg" style="width:100%">
   <div class="text1">
   <h2>About  Orchids  International  Schools</h2>
 </div>
@@ -534,8 +534,8 @@ Orchids is dedicated to nurturing responsive and motivated students through a dy
 With its world-class schools in Hyderabad, Bengaluru, Visakhapatnam, and Mohali – Orchids is regarded as one of India’s top International schools with its high standards of teaching methodology, technology collaboration, and global culture in every aspect of learning</p>
 </div>
 <button class="btn">Learn More</button>
-  <img class="image2" src="E:\Folder F\bg 2.avif" alt="bg1" style="width:38%">
-  <img class="image3" src="E:\Folder F\oak 6.webp" alt="bg1" style="width:38%">
+  <img class="image2" src="./Images/bg 2.avif" alt="bg1" style="width:38%">
+  <img class="image3" src="./Images/oak 6.webp" alt="bg1" style="width:38%">
  
 </div>
 
